Compiler-backend/src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> func_declaration
Rule 6     var_declaration -> type_specifier IDENTIFIER SEMICOLON
Rule 7     var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> FLOAT
Rule 10    func_declaration -> type_specifier IDENTIFIER LPAREN params RPAREN compound_stmt
Rule 11    params -> param_list
Rule 12    params -> empty
Rule 13    param_list -> param_list COMMA param
Rule 14    param_list -> param
Rule 15    param -> type_specifier IDENTIFIER
Rule 16    compound_stmt -> LBRACE stmt_list RBRACE
Rule 17    stmt_list -> stmt_list statement
Rule 18    stmt_list -> empty
Rule 19    statement -> expr_stmt
Rule 20    statement -> var_declaration
Rule 21    statement -> compound_stmt
Rule 22    statement -> if_stmt
Rule 23    statement -> return_stmt
Rule 24    if_stmt -> IF LPAREN expression RPAREN statement
Rule 25    if_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 26    return_stmt -> RETURN expression SEMICOLON
Rule 27    expr_stmt -> expression SEMICOLON
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression MULTIPLY expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> expression LT expression
Rule 33    expression -> expression GT expression
Rule 34    expression -> expression LE expression
Rule 35    expression -> expression GE expression
Rule 36    expression -> expression EQ expression
Rule 37    expression -> expression NE expression
Rule 38    expression -> MINUS expression
Rule 39    expression -> LPAREN expression RPAREN
Rule 40    expression -> INT_LITERAL
Rule 41    expression -> FLOAT_LITERAL
Rule 42    expression -> IDENTIFIER
Rule 43    expression -> IDENTIFIER LPAREN arg_list RPAREN
Rule 44    arg_list -> arg_list COMMA expression
Rule 45    arg_list -> expression
Rule 46    arg_list -> empty
Rule 47    empty -> <empty>
Rule 48    expression -> STRING_LITERAL
Rule 49    preprocessor -> <empty>

Terminals, with rules where they appear

ASSIGN               : 7
COMMA                : 13 44
DIVIDE               : 31
ELSE                 : 25
EQ                   : 36
FLOAT                : 9
FLOAT_LITERAL        : 41
GE                   : 35
GT                   : 33
IDENTIFIER           : 6 7 10 15 42 43
IF                   : 24 25
INT                  : 8
INT_LITERAL          : 40
LBRACE               : 16
LE                   : 34
LPAREN               : 10 24 25 39 43
LT                   : 32
MINUS                : 29 38
MULTIPLY             : 30
NE                   : 37
PLUS                 : 28
RBRACE               : 16
RETURN               : 26
RPAREN               : 10 24 25 39 43
SEMICOLON            : 6 7 26 27
STRING_LITERAL       : 48
error                : 

Nonterminals, with rules where they appear

arg_list             : 43 44
compound_stmt        : 10 21
declaration          : 2 3
declarations         : 1 2
empty                : 12 18 46
expr_stmt            : 19
expression           : 7 24 25 26 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 39 44 45
func_declaration     : 5
if_stmt              : 22
param                : 13 14
param_list           : 11 13
params               : 10
preprocessor         : 
program              : 0
return_stmt          : 23
statement            : 17 24 25 25
stmt_list            : 16 17
type_specifier       : 6 7 10 15
var_declaration      : 4 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declarations declaration
    (3) declarations -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . func_declaration
    (6) var_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (7) var_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (10) func_declaration -> . type_specifier IDENTIFIER LPAREN params RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT

    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    func_declaration               shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .
    (2) declarations -> declarations . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . func_declaration
    (6) var_declaration -> . type_specifier IDENTIFIER SEMICOLON
    (7) var_declaration -> . type_specifier IDENTIFIER ASSIGN expression SEMICOLON
    (10) func_declaration -> . type_specifier IDENTIFIER LPAREN params RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT

    $end            reduce using rule 1 (program -> declarations .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    declaration                    shift and go to state 9
    var_declaration                shift and go to state 4
    func_declaration               shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declarations -> declaration .

    INT             reduce using rule 3 (declarations -> declaration .)
    FLOAT           reduce using rule 3 (declarations -> declaration .)
    $end            reduce using rule 3 (declarations -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> func_declaration .

    INT             reduce using rule 5 (declaration -> func_declaration .)
    FLOAT           reduce using rule 5 (declaration -> func_declaration .)
    $end            reduce using rule 5 (declaration -> func_declaration .)


state 6

    (6) var_declaration -> type_specifier . IDENTIFIER SEMICOLON
    (7) var_declaration -> type_specifier . IDENTIFIER ASSIGN expression SEMICOLON
    (10) func_declaration -> type_specifier . IDENTIFIER LPAREN params RPAREN compound_stmt

    IDENTIFIER      shift and go to state 10


state 7

    (8) type_specifier -> INT .

    IDENTIFIER      reduce using rule 8 (type_specifier -> INT .)


state 8

    (9) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 9 (type_specifier -> FLOAT .)


state 9

    (2) declarations -> declarations declaration .

    INT             reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    $end            reduce using rule 2 (declarations -> declarations declaration .)


state 10

    (6) var_declaration -> type_specifier IDENTIFIER . SEMICOLON
    (7) var_declaration -> type_specifier IDENTIFIER . ASSIGN expression SEMICOLON
    (10) func_declaration -> type_specifier IDENTIFIER . LPAREN params RPAREN compound_stmt

    SEMICOLON       shift and go to state 11
    ASSIGN          shift and go to state 12
    LPAREN          shift and go to state 13


state 11

    (6) var_declaration -> type_specifier IDENTIFIER SEMICOLON .

    INT             reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT           reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RBRACE          reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LBRACE          reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IF              reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    MINUS           reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    LPAREN          reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    INT_LITERAL     reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    FLOAT_LITERAL   reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    STRING_LITERAL  reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)
    ELSE            reduce using rule 6 (var_declaration -> type_specifier IDENTIFIER SEMICOLON .)


state 12

    (7) var_declaration -> type_specifier IDENTIFIER ASSIGN . expression SEMICOLON
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 15

state 13

    (10) func_declaration -> type_specifier IDENTIFIER LPAREN . params RPAREN compound_stmt
    (11) params -> . param_list
    (12) params -> . empty
    (13) param_list -> . param_list COMMA param
    (14) param_list -> . param
    (47) empty -> .
    (15) param -> . type_specifier IDENTIFIER
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT

    RPAREN          reduce using rule 47 (empty -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8

    type_specifier                 shift and go to state 21
    params                         shift and go to state 22
    param_list                     shift and go to state 23
    empty                          shift and go to state 24
    param                          shift and go to state 25

state 14

    (42) expression -> IDENTIFIER .
    (43) expression -> IDENTIFIER . LPAREN arg_list RPAREN

    SEMICOLON       reduce using rule 42 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 42 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 42 (expression -> IDENTIFIER .)
    MULTIPLY        reduce using rule 42 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 42 (expression -> IDENTIFIER .)
    LT              reduce using rule 42 (expression -> IDENTIFIER .)
    GT              reduce using rule 42 (expression -> IDENTIFIER .)
    LE              reduce using rule 42 (expression -> IDENTIFIER .)
    GE              reduce using rule 42 (expression -> IDENTIFIER .)
    EQ              reduce using rule 42 (expression -> IDENTIFIER .)
    NE              reduce using rule 42 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 42 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 42 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 26


state 15

    (7) var_declaration -> type_specifier IDENTIFIER ASSIGN expression . SEMICOLON
    (28) expression -> expression . PLUS expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . MULTIPLY expression
    (31) expression -> expression . DIVIDE expression
    (32) expression -> expression . LT expression
    (33) expression -> expression . GT expression
    (34) expression -> expression . LE expression
    (35) expression -> expression . GE expression
    (36) expression -> expression . EQ expression
    (37) expression -> expression . NE expression

    SEMICOLON       shift and go to state 27
    PLUS            shift and go to state 28
    MINUS           shift and go to state 29
    MULTIPLY        shift and go to state 30
    DIVIDE          shift and go to state 31
    LT              shift and go to state 32
    GT              shift and go to state 33
    LE              shift and go to state 34
    GE              shift and go to state 35
    EQ              shift and go to state 36
    NE              shift and go to state 37


state 16

    (38) expression -> MINUS . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 38

state 17

    (39) expression -> LPAREN . expression RPAREN
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 39

state 18

    (40) expression -> INT_LITERAL .

    SEMICOLON       reduce using rule 40 (expression -> INT_LITERAL .)
    PLUS            reduce using rule 40 (expression -> INT_LITERAL .)
    MINUS           reduce using rule 40 (expression -> INT_LITERAL .)
    MULTIPLY        reduce using rule 40 (expression -> INT_LITERAL .)
    DIVIDE          reduce using rule 40 (expression -> INT_LITERAL .)
    LT              reduce using rule 40 (expression -> INT_LITERAL .)
    GT              reduce using rule 40 (expression -> INT_LITERAL .)
    LE              reduce using rule 40 (expression -> INT_LITERAL .)
    GE              reduce using rule 40 (expression -> INT_LITERAL .)
    EQ              reduce using rule 40 (expression -> INT_LITERAL .)
    NE              reduce using rule 40 (expression -> INT_LITERAL .)
    RPAREN          reduce using rule 40 (expression -> INT_LITERAL .)
    COMMA           reduce using rule 40 (expression -> INT_LITERAL .)


state 19

    (41) expression -> FLOAT_LITERAL .

    SEMICOLON       reduce using rule 41 (expression -> FLOAT_LITERAL .)
    PLUS            reduce using rule 41 (expression -> FLOAT_LITERAL .)
    MINUS           reduce using rule 41 (expression -> FLOAT_LITERAL .)
    MULTIPLY        reduce using rule 41 (expression -> FLOAT_LITERAL .)
    DIVIDE          reduce using rule 41 (expression -> FLOAT_LITERAL .)
    LT              reduce using rule 41 (expression -> FLOAT_LITERAL .)
    GT              reduce using rule 41 (expression -> FLOAT_LITERAL .)
    LE              reduce using rule 41 (expression -> FLOAT_LITERAL .)
    GE              reduce using rule 41 (expression -> FLOAT_LITERAL .)
    EQ              reduce using rule 41 (expression -> FLOAT_LITERAL .)
    NE              reduce using rule 41 (expression -> FLOAT_LITERAL .)
    RPAREN          reduce using rule 41 (expression -> FLOAT_LITERAL .)
    COMMA           reduce using rule 41 (expression -> FLOAT_LITERAL .)


state 20

    (48) expression -> STRING_LITERAL .

    SEMICOLON       reduce using rule 48 (expression -> STRING_LITERAL .)
    PLUS            reduce using rule 48 (expression -> STRING_LITERAL .)
    MINUS           reduce using rule 48 (expression -> STRING_LITERAL .)
    MULTIPLY        reduce using rule 48 (expression -> STRING_LITERAL .)
    DIVIDE          reduce using rule 48 (expression -> STRING_LITERAL .)
    LT              reduce using rule 48 (expression -> STRING_LITERAL .)
    GT              reduce using rule 48 (expression -> STRING_LITERAL .)
    LE              reduce using rule 48 (expression -> STRING_LITERAL .)
    GE              reduce using rule 48 (expression -> STRING_LITERAL .)
    EQ              reduce using rule 48 (expression -> STRING_LITERAL .)
    NE              reduce using rule 48 (expression -> STRING_LITERAL .)
    RPAREN          reduce using rule 48 (expression -> STRING_LITERAL .)
    COMMA           reduce using rule 48 (expression -> STRING_LITERAL .)


state 21

    (15) param -> type_specifier . IDENTIFIER

    IDENTIFIER      shift and go to state 40


state 22

    (10) func_declaration -> type_specifier IDENTIFIER LPAREN params . RPAREN compound_stmt

    RPAREN          shift and go to state 41


state 23

    (11) params -> param_list .
    (13) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 11 (params -> param_list .)
    COMMA           shift and go to state 42


state 24

    (12) params -> empty .

    RPAREN          reduce using rule 12 (params -> empty .)


state 25

    (14) param_list -> param .

    COMMA           reduce using rule 14 (param_list -> param .)
    RPAREN          reduce using rule 14 (param_list -> param .)


state 26

    (43) expression -> IDENTIFIER LPAREN . arg_list RPAREN
    (44) arg_list -> . arg_list COMMA expression
    (45) arg_list -> . expression
    (46) arg_list -> . empty
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL
    (47) empty -> .

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20
    RPAREN          reduce using rule 47 (empty -> .)
    COMMA           reduce using rule 47 (empty -> .)

    arg_list                       shift and go to state 43
    expression                     shift and go to state 44
    empty                          shift and go to state 45

state 27

    (7) var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .

    INT             reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    FLOAT           reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    $end            reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    LBRACE          reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    IF              reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    RETURN          reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    MINUS           reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    LPAREN          reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    INT_LITERAL     reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    FLOAT_LITERAL   reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    IDENTIFIER      reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    STRING_LITERAL  reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)
    ELSE            reduce using rule 7 (var_declaration -> type_specifier IDENTIFIER ASSIGN expression SEMICOLON .)


state 28

    (28) expression -> expression PLUS . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 46

state 29

    (29) expression -> expression MINUS . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 47

state 30

    (30) expression -> expression MULTIPLY . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 48

state 31

    (31) expression -> expression DIVIDE . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 49

state 32

    (32) expression -> expression LT . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL

    MINUS           shift and go to state 16
    LPAREN          shift and go to state 17
    INT_LITERAL     shift and go to state 18
    FLOAT_LITERAL   shift and go to state 19
    IDENTIFIER      shift and go to state 14
    STRING_LITERAL  shift and go to state 20

    expression                     shift and go to state 50

state 33

    (33) expression -> expression GT . expression
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression MULTIPLY expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression LT expression
    (33) expression -> . expression GT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GE expression
    (36) expression -> . expression EQ expression
    (37) expression -> . expression NE expression
    (38) expression -> . MINUS expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . INT_LITERAL
    (41) expression -> . FLOAT_LITERAL
    (42) expression -> . IDENTIFIER
    (43) expression -> . IDENTIFIER LPAREN arg_list RPAREN
    (48) expression -> . STRING_LITERAL
